<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_margin="5dp"
        app:cardElevation="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/teal_200">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgIm"
                    android:layout_width="125dp"
                    android:layout_height="168dp"
                    android:contentDescription="@string/capa_do_filme" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="168dp"
                    android:layout_marginStart="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/nameTv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/titulo"
                        android:layout_marginTop="4dp"
                        android:textColor="@color/purple_200"
                        android:textSize="26sp" />

                    <TextView
                        android:id="@+id/watchedTv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/assistido"
                        android:textColor="@color/purple_200"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/genreTv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/genero"
                        android:layout_marginTop="4dp"
                        android:textColor="@color/purple_200"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/starsTv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/nota"
                        android:textColor="@color/purple_200"
                        android:textSize="15sp" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>